Fix layout issues caused by off-canvas nav.

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -11,6 +11,10 @@ body.js {
 }
 
 /* general rules */ 
+.off-canvas-wrap, .inner-wrap {
+	height: 100%;
+}
+
 .panel {
 	min-height: 100%; 
 	padding: 70px 20px 20px;
